Document PPDG/src/objects/MetricRefreshServiceConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Client_Key__c</fullName>
        <label>Client Key</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Callout_Timeout__c</fullName>
        <description>The default timeout is 10000 milliseconds . The maximum values will be 120000 milliseconds (Salesforce limit).</description>
        <inlineHelpText>The default timeout is 10000 milliseconds . The maximum values will be 120000 milliseconds (Salesforce limit).</inlineHelpText>
        <label>Custom Callout Timeout</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domain_URL__c</fullName>
        <label>Domain URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Reports_Per_Batch__c</fullName>
        <description>The number of reports processed a the same time, current default value is 100, we can let you configure that parameter also (Between 1 and 200 as Salesforce limit). This value is important because there is a cumulative timeout limit per transaction which means that a small timeout per each report can reach the total cumulative limit.</description>
        <inlineHelpText>The number of reports processed a the same time, current default value is 100, we can let you configure that parameter also (Between 1 and 200 as Salesforce limit). This value is important because there is a cumulative timeout limit per transaction which</inlineHelpText>
        <label>Number Reports Per Batch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Metric Refresh Service Config</label>
</CustomObject>